# Apti

./: .gitignore  CLAUDE.md  LICENSE  apti-brain-design.md  render.yaml  send-reminder.ps1  study-system.jsx  vercel.json
.claude/: settings.json  settings.local.json
api/: index.py  requirements.txt
backend/: .env.example  pyproject.toml  requirements.txt  reset_progress.sql
backend/app/: main.py
backend/app/apti/: client.py  prompts.py  schemas.py
backend/app/db/: connection.py  queries.py  schema.sql
backend/app/routers/: notes.py  push.py  reviews.py  sessions.py  skills.py  subjects.py
backend/app/scheduler/: sm2.py
backend/migrations/: 001_subjects.py  002_notes_and_practice.py
backend/tests/: test_sm2.py
frontend/: index.html  package-lock.json  vite.config.js
frontend/public/: manifest.json  sw.js
frontend/src/: index.css  main.jsx  python-lab-data.js  study-system.jsx
